Make input font size responsive

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ html {
     box-sizing: border-box;
 }
 
+input,
+button,
+select {
+    font-size: 0.81rem;
+}
+
 *,
 *:before,
 *:after {
@@ -185,7 +191,7 @@ select {
 }
 
 #Theme-select {
-    width: 108px;
+    width: max-content;
     text-align: center;
 }
 
